--- a/dominant_colors/hourly_dominant_colors_cities.ipynb
+++ b/dominant_colors/hourly_dominant_colors_cities.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -17,26 +17,27 @@
     "from scipy import stats\n",
     "from PIL import Image\n",
     "import collections\n",
+    "import VizDomHSV as DomHSV\n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "in_file = \"/Users/myazdaniUCSD/Dropbox/Broadway_processed_data/processedData/dom_HSV_sample.csv\"\n",
-    "out_path = \"/Users/myazdaniUCSD/Desktop/\""
+    "in_file = \"/Users/myazdaniUCSD/Documents/twitter_data_grant/processedData/dom_HSV_1K_sample_twitter.csv\"\n",
+    "out_path = \"/Users/myazdaniUCSD/Desktop/city_colors/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -57,10 +58,10 @@
     {
      "data": {
       "text/plain": [
-       "['filename', 'hour', 'H.mode', 'S.mode', 'V.mode']"
+       "['image.path', 'city', 'hour', 'H.mode', 'S.mode', 'V.mode']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,66 +73,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "hours = set([line[1] for line in lines[1:]])\n",
-    "\n",
-    "hours_colors = {}\n",
-    "width = 500\n",
-    "for hour in hours:\n",
-    "    hsv_colors = array([list(map(lambda x: float(x) - 1.0, line[2:])) for line in lines[1:] if line[1] == hour])\n",
-    "    #hsv_colors[:,1] = 255 # keep saturation fixed\n",
-    "    #hsv_colors[:,2] = 255 # keep value fixed\n",
-    "    hsv_colors = hsv_colors[hsv_colors[:,2].argsort()]\n",
-    "    height = hsv_colors.shape[0]\n",
-    "    hsv = reshape(hsv_colors, (height, 1, 3))\n",
-    "    hours_colors[int(hour)] = array(tile(hsv, (1, width, 1)), dtype = uint8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "for hour in hours_colors.keys():\n",
-    "    hsv = hours_colors[hour]\n",
-    "    cv2.imwrite(out_path+str(hour)+\".png\", cv2.cvtColor(hsv, cv2.COLOR_HSV2BGR))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "od = collections.OrderedDict(sorted(hours_colors.items()))"
+    "cities = list(set(line[1] for line in lines[1:]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "all_hours = cv2.cvtColor(od[0], cv2.COLOR_HSV2BGR)\n",
-    "for hour in od.keys()[1:]:\n",
-    "    all_hours = hstack((all_hours, cv2.cvtColor(od[hour], cv2.COLOR_HSV2BGR)))"
+    "for city in cities:\n",
+    "    city_hourly_HSV = [line for line in lines[1:] if line[1] == city]\n",
+    "    bleh = [item.pop(1) for item in city_hourly_HSV]\n",
+    "    DomHSV.create_hourly_colors(city_hourly_HSV, out_path + city + \".png\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -139,16 +106,20 @@
     {
      "data": {
       "text/plain": [
-       "True"
+       "['/data/myazdani/images_remainder/2013/2013-11-13/06/BY7jYe_CEAAFp-V.jpg',\n",
+       " '0',\n",
+       " '110',\n",
+       " '10',\n",
+       " '16']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cv2.imwrite(out_path+\"all_hours\" + \".png\", all_hours)"
+    "city_hourly_HSV[0]"
    ]
   },
   {
