--- a/dominant_colors/hourly_dominant_colors_cities.ipynb
+++ b/dominant_colors/hourly_dominant_colors_cities.ipynb
@@ -29,7 +29,8 @@
    },
    "outputs": [],
    "source": [
-    "in_file = \"/Users/myazdaniUCSD/Documents/twitter_data_grant/processedData/dom_HSV_repeated_sample_twitter.csv\"\n",
+    "#in_file = \"/Users/myazdaniUCSD/Documents/twitter_data_grant/processedData/dom_HSV_repeated_sample_twitter.csv\"\n",
+    "in_file = \"/Users/myazdaniUCSD/Documents/twitter-diurnal-analysis/data/dom_HSV_sample_SD_control.csv\"\n",
     "out_path = \"/Users/myazdaniUCSD/Desktop/city_colors/\""
    ]
   },
@@ -58,7 +59,7 @@
     {
      "data": {
       "text/plain": [
-       "['image.path', 'city', 'hour', 'H.mode', 'S.mode', 'V.mode']"
+       "['image.path', 'data.type', 'hour', 'H.mode', 'S.mode', 'V.mode']"
       ]
      },
      "execution_count": 4,
@@ -106,10 +107,10 @@
     {
      "data": {
       "text/plain": [
-       "['/data/myazdani/images_remainder/2013/2013-12-29/08/BcpBejtCEAAaAiF.jpg',\n",
+       "['/data/myazdani/images_remainder/2013/2013-04-02/07/BG1C9edCIAAiZcb.jpg',\n",
        " '0',\n",
-       " '0',\n",
-       " '0',\n",
+       " '15',\n",
+       " '255',\n",
        " '255']"
       ]
      },
